Made it so salary input only visible when being manually edited, otherwise it's just for display. Solves input mask problems.

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -1,3 +1,4 @@
 $primary: #E4003B;
 $secondary: #C50037;
+$tertiary: #6f0015;
 $primary-font: 'Open Sans', Arial, Helvetica, sans-serif;
